# evdevpp

./: .bazelrc  .clang-tidy  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md
evdevpp/: BUILD.bazel  defs.bzl  device.cc  device.h  ecodes.h  eventio.cc  eventio.h  events.cc  events.h  genecodes.py  info.cc  info.h  user_device.cc  user_device.h  util.cc  util.h
tools/: BUILD.bazel  cleareffects.cc  dumpevents.cc
