module(
    name = "evdevpp",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "buildozer", version = "8.2.1")

bazel_dep(name = "libevdev", version = "1.13.2")

# FMT library
bazel_dep(name = "fmt", version = "12.1.0")

# CLI11 C++ CLI library
bazel_dep(name = "cli11", version = "2.5.0")

bazel_dep(name = "abseil-cpp", version = "20250512.1")

# Coroutines
http_archive(
    name = "coroutines",
    integrity = "sha256-fdSwDRrEyFf6PRX8fkkfSPTWPB3Z9tc5GiUbkwsk0Mc=",
    strip_prefix = "co-3.0.0",
    urls = ["https://github.com/dallison/co/archive/refs/tags/3.0.0.tar.gz"],
)

# Toolbelt
git_repository(
    name = "toolbelt",
    commit = "0286a5f6da0f256d6ffbc9f6b43cd6b003fe9dbf",
    remote = "https://github.com/dallison/cpp_toolbelt.git",
)

# Aspects to extract C++ metadata and fix dependency issues.
# bazel run -c dbg //evdevpp:refresh_all -- -c dbg
# bazel run -c dbg @bazel_cc_meta//cc_meta:fix_deps
http_archive(
    name = "bazel_cc_meta",
    integrity = "sha256-LznhQ9l2kwHgCkVwYsUJAjlyAM5WlvFrUflTR4atxbw=",
    strip_prefix = "bazel_cc_meta-0.1.0",
    urls = ["https://github.com/mikael-s-persson/bazel_cc_meta/archive/refs/tags/v0.1.0.tar.gz"],
)
