module(
    name = "evdevpp",
    version = "0.0.0",
    bazel_compatibility = [">=7.4.0"],
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "buildozer", version = "8.5.1")

bazel_dep(name = "libevdev", version = "1.13.6")

# FMT library
bazel_dep(name = "fmt", version = "12.1.0")

# CLI11 C++ CLI library
#bazel_dep(name = "cli11", version = "2.6.2")
http_archive(
    name = "cli11",
    integrity = "sha256-xuprLlYIs+qGF5mb1fR0IMcbLr243EdnwQNNHaV4VxE=",
    strip_prefix = "CLI11-2.6.2",
    urls = ["https://github.com/CLIUtils/CLI11/archive/refs/tags/v2.6.2.tar.gz"],
)

bazel_dep(name = "abseil-cpp", version = "20260107.1")

# Coroutines
bazel_dep(name = "coroutines", version = "3.1.0")

# Toolbelt
bazel_dep(name = "cpp_toolbelt", version = "2.0.1")

# Aspects to extract C++ metadata and fix dependency issues.
# bazel run -c dbg //evdevpp:refresh_all -- -c dbg
# bazel run -c dbg @bazel_cc_meta//cc_meta:fix_deps
bazel_dep(name = "bazel_cc_meta", version = "0.2.0")
