
cc_binary(
    name = "dumpevents",
    srcs = [
        "dumpevents.cc",
    ],
    deps = [
        "//evdevpp",
        "//evdevpp:ecodes",
        "@cli11",
        "@fmt",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_binary(
    name = "cleareffects",
    srcs = [
        "cleareffects.cc",
    ],
    deps = [
        "//evdevpp",
        "@cli11",
        "@fmt",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)
